# BGx

./: Readme.md
src/BGx/: Application.cpp  Application.hpp  ApplicationAdapter.cpp  ApplicationAdapter.hpp  ApplicationListener.cpp  ApplicationListener.hpp  ApplicationLogger.cpp  ApplicationLogger.hpp  Audio.cpp  Audio.hpp  BGx.cpp  BGx.hpp  CMakeLists.txt  Files.cpp  Files.hpp  Game.cpp  Game.hpp  Graphics.cpp  Graphics.hpp  Input.cpp  Input.hpp  InputAdapter.cpp  InputAdapter.hpp  InputEventQueue.cpp  InputEventQueue.hpp  InputMultiplexer.cpp  InputMultiplexer.hpp  InputProcessor.cpp  InputProcessor.hpp  LifeCycleListener.cpp  LifeCycleListener.hpp  Net.cpp  Net.hpp  Preferences.cpp  Preferences.hpp  Screen.cpp  Screen.hpp  ScreenAdapter.cpp  ScreenAdapter.hpp  Version.cpp  (+1 more)
src/BGx/assets/: AssetDescriptor.cpp  AssetDescriptor.hpp  AssetErrorListener.cpp  AssetErrorListener.hpp  AssetLoaderParameters.cpp  AssetLoaderParameters.hpp  AssetLoadingTask.cpp  AssetLoadingTask.hpp  AssetManager.cpp  AssetManager.hpp  RefCountedContainer.cpp  RefCountedContainer.hpp
src/BGx/assets/loaders/: AssetLoader.cpp  AssetLoader.hpp  AsynchronousAssetLoader.cpp  AsynchronousAssetLoader.hpp  BitmapFontLoader.cpp  BitmapFontLoader.hpp  CubemapLoader.cpp  CubemapLoader.hpp  FileHandleResolver.cpp  FileHandleResolver.hpp  I18BBundleLoader.cpp  I18BBundleLoader.hpp  ModelLoader.cpp  ModelLoader.hpp  MusicLoader.cpp  MusicLoader.hpp  ParticleEffectLoader.cpp  ParticleEffectLoader.hpp  PixmapLoader.cpp  PixmapLoader.hpp  ShaderProgramLoader.cpp  ShaderProgramLoader.hpp  SkinLoader.cpp  SkinLoader.hpp  SoundLoader.cpp  SoundLoader.hpp  SynchronousAssetLoader.cpp  SynchronousAssetLoader.hpp  TextureAtlasLoader.cpp  TextureAtlasLoader.hpp  TextureLoader.cpp  TextureLoader.hpp
src/BGx/audio/: AudioDevice.cpp  AudioDevice.hpp  AudioRecorder.cpp  AudioRecorder.hpp  Music.cpp  Music.hpp  Sound.cpp  Sound.hpp
src/BGx/files/: FileHandle.cpp  FileHandle.hpp  FileHandleStream.cpp  FileHandleStream.hpp
src/BGx/graphics/: Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  Colors.cpp  Colors.hpp  Cubemap.cpp  Cubemap.hpp  CubemapData.cpp  CubemapData.hpp  Cursor.cpp  Cursor.hpp  FPSLogger.cpp  FPSLogger.hpp  GL10.cpp  GL10.hpp  GL20.cpp  GL20.hpp  GL30.cpp  GL30.hpp  GLTexture.cpp  GLTexture.hpp  Mesh.cpp  Mesh.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  Pixmap.cpp  Pixmap.hpp  PixmapIO.cpp  PixmapIO.hpp  Texture.cpp  Texture.hpp  TextureArray.cpp  TextureArray.hpp  TextureArrayData.cpp  TextureArrayData.hpp  TextureData.cpp  TextureData.hpp  (+4 more)
src/BGx/graphics/g2d/: Animation.cpp  Animation.hpp  BGx2DPixmap.cpp  BGx2DPixmap.hpp  Batch.cpp  Batch.hpp  BitmapFont.cpp  BitmapFont.hpp  BitmapFontCache.cpp  BitmapFontCache.hpp  CpuSpriteBatch.cpp  CpuSpriteBatch.hpp  DistanceFieldFont.cpp  DistanceFieldFont.hpp  GlyphLayout.cpp  GlyphLayout.hpp  NinePatch.cpp  NinePatch.hpp  ParticleEffect.hpp  ParticleEffectPool.cpp  ParticleEffectPool.hpp  ParticleEmitter.cpp  ParticleEmitter.hpp  PixmapPacker.cpp  PixmapPacker.hpp  PixmapPackerIO.cpp  PixmapPackerIO.hpp  PolygonRegion.cpp  PolygonRegion.hpp  PolygonRegionLoader.cpp  PolygonRegionLoader.hpp  PolygonSprite.cpp  PolygonSprite.hpp  PolygonSpriteBatch.cpp  PolygonSpriteBatch.hpp  RepeatablePolygonSprite.cpp  (+11 more)
src/BGx/input/: GestureDetector.cpp  GestureDetector.hpp  RemoteInput.cpp  RemoteInput.hpp  RemoteSender.cpp  RemoteSender.hpp
src/BGx/internal/: memory
src/BGx/maps/: ImageResolver.cpp  ImageResolver.hpp  Map.cpp  Map.hpp  MapLayer.cpp  MapLayer.hpp  MapLayers.cpp  MapLayers.hpp  MapObject.cpp  MapObject.hpp  MapObjects.cpp  MapObjects.hpp  MapProperties.cpp  MapProperties.hpp  MapRenderer.cpp  MapRenderer.hpp
src/BGx/math/: Affine2.cpp  Affine2.hpp  BSpline.cpp  BSpline.hpp  Beizer.cpp  Beizer.hpp  Breshnam.cpp  Breshnam.hpp  CatmulRomSpline.cpp  CatmulRomSpline.hpp  Circle.cpp  Circle.hpp  ConvexHull.cpp  ConvexHull.hpp  CumulativeDistribution.cpp  CumulativeDistribution.hpp  DelaunaryTriangulator.cpp  DelaunaryTriangulator.hpp  EarClippingTriangulator.cpp  EarClippingTriangulator.hpp  Ellipse.cpp  Ellipse.hpp  FloatCounter.cpp  FloatCounter.hpp  Frustum.cpp  Frustum.hpp  GeometryUtils.cpp  GeometryUtils.hpp  GridPoint2.cpp  GridPoint2.hpp  GridPoint3.cpp  GridPoint3.hpp  Interpolation.cpp  Interpolation.hpp  Intersector.cpp  Intersector.hpp  MathUtils.cpp  MathUtils.hpp  Matrix3.cpp  Matrix3.hpp  (+26 more)
src/BGx/net/: HttpParametersUtils.cpp  HttpParametersUtils.hpp  HttpRequestBuilder.cpp  HttpRequestBuilder.hpp  HttpRequestHeader.cpp  HttpRequestHeader.hpp  HttpResponseHeader.cpp  HttpResponseHeader.hpp  HttpStatus.cpp  HttpStatus.hpp  ServerSocket.cpp  ServerSocket.hpp  ServerSocketHints.cpp  ServerSocketHints.hpp  Socket.cpp  Socket.hpp  SocketHints.cpp  SocketHints.hpp
src/BGx/utils/: Align.cpp  Align.hpp  ArrayMap.cpp  ArrayMap.hpp  AtomicQueue.cpp  AtomicQueue.hpp  BGxBuild.cpp  BGxBuild.hpp  BGxNativeLoader.cpp  BGxNativeLoader.hpp  BGxRuntimeException.cpp  BGxRuntimeException.hpp  Base64Coder.cpp  Base64Coder.hpp  BaseJsonReader.cpp  BaseJsonReader.hpp  BinaryHeap.cpp  BinaryHeap.hpp  Bits.cpp  Bits.hpp  BooleanArray.cpp  BooleanArray.hpp  BufferUtils.cpp  BufferUtils.hpp  ByteArray.cpp  ByteArray.hpp  CMakeLists.txt  CharArray.cpp  CharArray.hpp  Clipboard.cpp  Clipboard.hpp  ComparableTimSort.cpp  ComparableTimSort.hpp  DataBuffer.cpp  DataBuffer.hpp  DataInput.cpp  DataInput.hpp  DataOutput.cpp  DataOutput.hpp  DelayedRemovalArray.cpp  (+107 more)
(+1769 files in other folders)
