#add_subdirectory(async)
#add_subdirectory(compression)
#add_subdirectory(reflect)
#add_subdirectory(scenes)

set(BGX_UTILS_HPPEADERS
        Align.hpp
        ArrayMap.hpp
        AtomicQueue.hpp
        Base64Coder.hpp
        BaseJsonReader.hpp
        BinaryHeap.hpp
        Bits.hpp
        BooleanArray.hpp
        BufferUtils.hpp
        ByteArray.hpp
        CharArray.hpp
        Clipboard.hpp
        ComparableTimSort.hpp
        DataBuffer.hpp
        DataInput.hpp
        DataOutput.hpp
        DelayedRemovalArray.hpp
        Disposable.hpp
        FloatArray.hpp
        FlushablePool.hpp
        BGxBuild.hpp
        BGxNativeLoader.hpp
        BGxRuntimeException.hpp
        I18NBundle.hpp
        IdentityMap.hpp
        IntArray.hpp
        IntFloatMap.hpp
        IntIntMap.hpp
        IntMap.hpp
        IntSet.hpp
        Json.hpp
        JsonReader.hpp
        JsonValue.hpp
        JsonWriter.hpp
        LittleEndianInputStream.hpp
        Logger.hpp
        LongArray.hpp
        LongMap.hpp
        NumberUtils.hpp
        ObjectFloatMap.hpp
        ObjectIntMap.hpp
        ObjectMap.hpp
        OrderedSet.hpp
        PauseableThread.hpp
        PerformanceCounter.hpp
        PerformanceCounters.hpp
        Pool.hpp
        PooledLinkedList.hpp
        Pools.hpp
        Predicate.hpp
        PropertiesUtils.hpp
        Queue.hpp
        QuickSelect.hpp
        ReflectionPool.hpp
        Scaline.hpp
        SceneUtils.hpp
        Select.hpp
        SetializationException.hpp
        ShaderLibraryLoader.hpp
        ShortArray.hpp
        SnapshotArray.hpp
        Sort.hpp
        SortedIntList.hpp
        StreamUtils.hpp
        StringBuilder.hpp
        TextFormatter.hpp
        Timer.hpp
        TimeUtils.hpp
        TimSort.hpp
        UBJsonReader.hpp
        UBJsonWriter.hpp
        XmlReader.hpp
        )

set(BGX_UTILS_SOURCES
        Align.cpp
        ArrayMap.cpp
        AtomicQueue.cpp
        Base64Coder.cpp
        BaseJsonReader.cpp
        BinaryHeap.cpp
        Bits.cpp
        BooleanArray.cpp
        BufferUtils.cpp
        ByteArray.cpp
        CharArray.cpp
        Clipboard.cpp
        ComparableTimSort.cpp
        DataBuffer.cpp
        DataInput.cpp
        DataOutput.cpp
        DelayedRemovalArray.cpp
        Disposable.cpp
        FloatArray.cpp
        FlushablePool.cpp
        BGxBuild.cpp
        BGxNativeLoader.cpp
        BGxRuntimeException.cpp
        I18NBundle.cpp
        IdentityMap.cpp
        IntArray.cpp
        IntFloatMap.cpp
        IntIntMap.cpp
        IntMap.cpp
        IntSet.cpp
        Json.cpp
        JsonReader.cpp
        JsonValue.cpp
        JsonWriter.cpp
        LittleEndianInputStream.cpp
        Logger.cpp
        LongArray.cpp
        LongMap.cpp
        NumberUtils.cpp
        ObjectFloatMap.cpp
        ObjectIntMap.cpp
        ObjectMap.cpp
        OrderedSet.cpp
        PauseableThread.cpp
        PerformanceCounter.cpp
        PerformanceCounters.cpp
        Pool.cpp
        PooledLinkedList.cpp
        Pools.cpp
        Predicate.cpp
        PropertiesUtils.cpp
        Queue.cpp
        QuickSelect.cpp
        ReflectionPool.cpp
        Scaline.cpp
        SceneUtils.cpp
        Select.cpp
        SetializationException.cpp
        ShaderLibraryLoader.cpp
        ShortArray.cpp
        SnapshotArray.cpp
        Sort.cpp
        SortedIntList.cpp
        StreamUtils.cpp
        StringBuilder.cpp
        TextFormatter.cpp
        Timer.cpp
        TimeUtils.cpp
        TimSort.cpp
        UBJsonReader.cpp
        UBJsonWriter.cpp
        XmlReader.cpp
        )